--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@tailwindcss/forms": "^0.5.9",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "next": "14.2.4",
+    "react": "^18",
+    "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "zod": "^3.23.8"
   },
