--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
     "@tailwindcss/forms": "^0.5.9",
     "next": "14.2.4",
