--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.4",
     "@hookform/resolvers": "^3.6.0",
     "@tailwindcss/forms": "^0.5.9",
+    "mongodb": "^6.10.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
